# 100x-orchestrator

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  agent_session.py  agent_view.html  agent_view.js  aider_agent.py  app.py  config.json  config_menu.py  config_schema.json  critique_agent.py  critique_agent_plan.md  critique_handler.py  database.py  db.py  exponent.txt  github_client.py  github_token.py  index.js  litellm_client.py  logging_config.py  openrouter_client.py  orchestrator.py  pr_data.json  pr_submit_handler.js  progress_websocket.py  project_requirements.md  prompt_processor.py  prompts.py  pull_request.py  pyproject.toml  pytest.ini  requirements.txt  styles.css  task_manager.py  tasks.db  test_agent_session.py  timeout_demo.bat  (+3 more)
api/: add_task.py
app/: __init__.py  main.py  orchestrator.py
app/agents/: __init__.py  manager.py
app/config/: __init__.py  settings.py
app/monitoring/: __init__.py  progress_monitor.py
app/tasks/: __init__.py  task_manager.py
tasks/: tasks.json
templates/: agent_history.html  agent_view.html  agents.html  base.html  config_view.html  index.html
tests/: __init__.py  conftest.py  test_agent_manager.py  test_agent_session.py  test_app.py  test_basic.py  test_config.py  test_database.py  test_flask_ui.py  test_flask_ui_new.py  test_git_manager.py  test_github_token.py  test_litellm_client.py  test_main.py  test_openrouter_client.py  test_orchestrator.py  test_orchestrator_repo_name.py  test_progress_monitor.py  test_prompt_processor.py  test_prompts.py  test_pull_request.py  test_task_manager.py
(+12 files in other folders)
